deploy/okd/hermes-system/01-agent-build.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${AGENT_NAMESPACE}
