deploy/okd/hermes-system/02-observer-dionysos.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: agent-dionysos
  namespace: ${AGENT_NAMESPACE}
spec:
  serviceName: "dionysos"
  replicas: 1
  selector:
    matchLabels:
      app: dionysos
  template:
    metadata:
      labels:
        app: dionysos
    spec:
      serviceAccountName: ${SERVICE_ACCOUNT}
      hostPID: true
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet

      containers:
      - name: dionysos
        image: ${INTERNAL_REGISTRY}/${AGENT_NAMESPACE}/${AGENT_IMAGE_NAME}:latest
        imagePullPolicy: Always
        command: ["hermes", "gateway", "run"]
        tty: true
        stdin: true
        volumeMounts:
        - name: host-root
          mountPath: /host
          readOnly: true
        - name: agent-storage
          mountPath: /opt/data

      volumes:
      - name: host-root
        hostPath:
          path: /
          type: Directory
      - name: agent-storage
        emptyDir: {}
